      geda_complex_object_get_nearest_point to 5599 because 5600 was mid
      way between pin 1 and 33. #2-bit machines found pin 1 as nearest
      and 64 bit machine came up with pin 33.

    * tests/test_line_object.c: Fix check_line_object_scale test id`s,
      add checks for geda_line_object_translate.

    * tests/test_math.c: Add check for geda_math_random_number.

    * tests/test_picture_object.c: Change len in check_accessors to type
      size_t.

2020-07-10 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/scheme_object.c: Update documentation with references
      to the location of unit-tests.

2020-07-02 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/scheme_os.c: Eliminate ancillary pointer to path in
      procedures:

          * os_sys_config_dirs
          * os_sys_data_dirs

    * src/struct/s_weakref.c: Update Free Software Foundation address.

2020-07-01 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme: Update Free Software Foundation address in header:

          * src/scheme/edascmhookproxy.c
          * src/scheme/edascmvaluetypes.c
          * src/scheme/scheme_log.c

    * src/scheme/scheme_os.c: Eliminate ancillary pointer to path in
      procedures:

          * os_user_config_dir
          * os_user_data_dir

    * src/scheme/scheme_version.c: Remove unnecessary inclusion of
      libgedaguile_priv.h.

2020-06-30 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/scheme_object.c: Revise object_fill to allow retrieving
      fill options from arc objects. Revise object_set_fill_x to allow
      setting fill options for arc objects.

2020-06-29 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/scheme_log.c: Update documentation for function:

          * log_close_x

2020-06-26 Wiley E. Hill <wileyhill@gmail.com>

    * src/scheme/scheme_object.c: Add ancillary integer and revise
      object_set_stroke_x to set line_options even when scm values
      are invalid.

2020-06-23 Wiley E. Hill <wileyhill@gmail.com>
