@@ -10,6 +10,8 @@
 
     * tests/test_math.c: Add check for geda_math_random_number.
 
+    * tests/test_object_list.c: check_object_list_set_color
+
     * tests/test_picture_object.c: Change len in check_accessors to type
       size_t.
 
